Add name helper to contracts.

--- a/app/views/contracts/index.html.erb
+++ b/app/views/contracts/index.html.erb
@@ -10,7 +10,7 @@
           </div>
           <div class="min-w-0 flex-1">
             <a href="#" class="contract">
-              <p class="text-sm font-medium text-gray-900" role="title"><%= contract.provider.name %></p>
+              <p class="text-sm font-medium text-gray-900" role="title"><%= contract.name %></p>
               <p class="truncate text-sm text-gray-500" role="expires_at">Expires in <%= distance_of_time_in_words_to_now(contract.expires_at) %></p>
             </a>
           </div>
